package Student;

public class MySchool {
    public static void main(String[] args) {
        Student s1 = new GraduateStudent("Amin");
        s1.printName();
    }
}
